--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "latiss-icons",
   "version": "1.0.0",
   "description": "A versatile and lightweight icon library designed to work seamlessly with React, Next.js and React Native. Packed with beautifully crafted icons.",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "homepage": "",
   "scripts": {
      "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
